declarative/processor/src/test/resources/good/graph instance of method is instance.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Graph;
import com.inrupt.rdf.wrapping.declarative.annotation.OptionalFirstInstanceOfEither;
import com.inrupt.rdf.wrapping.declarative.annotation.Resource;

@Graph
interface X {
    @OptionalFirstInstanceOfEither("x")
    Y x();

    @Resource
    interface Y {
    }
}
